# Snake

./: CMakeLists.txt  README.md  fruit.cpp  fruit.h  main.cpp  menu.cpp  menu.h  snake.cpp  snake.h
